--- a/overview.qmd
+++ b/overview.qmd
@@ -16,11 +16,13 @@ Either any STA 100-level course or STA 230, 231, or 240L and MATH 216, 218, or 2
 
 # Class meetings
 
-|             |                         |                   |
-|-------------|-------------------------|-------------------|
-| **Lecture** | Tue & Thu 11:45am - 1pm | Old Chemistry 116 |
-| **Lab 01**  | Mon 11:45am - 1pm       | LSRC A247         |
-| **Lab 02**  | Mon 4:40 - 5:55pm       | Old Chemistry 101 |
++------------------------+---------------------------+----------------------+
+| **Lecture**            | Tue & Thu 10:05 - 11:20am | Old Chemistry 116    |
++------------------------+---------------------------+----------------------+
+| **Lab 01**             | Fri 8:30 - 9:45am         | Perkins Link #5      |
++------------------------+---------------------------+----------------------+
+| **Lab 02**             | Fri 10:05 - 11:20am       | Perkins Link #5      |
++------------------------+---------------------------+----------------------+
 
 # Teaching team
 
@@ -31,27 +33,27 @@ Either any STA 100-level course or STA 230, 231, or 240L and MATH 216, 218, or 2
 +----------------------+---------------+
 | Office hours         | Location      |
 +======================+===============+
-| Mon 1:30 - 2:30pm    | Old Chem 118B |
-|                      |               |
-| Thu 3 - 4pm          |               |
+|                      | Old Chem 118B |
 +----------------------+---------------+
 | *or by appointment.* |               |
 +----------------------+---------------+
 
 ## Teaching assistants
 
-+--------------+----------------+------------------------------------+-----------+
-| **Name**     | **Role**       | **Office Hours**                   |           |
-+--------------+----------------+------------------------------------+-----------+
-| Kat Husar    | Head TA\       | Tue 1:30 - 3:30pm, Old Chem 220    |           |
-|              | Lab 02L leader |                                    |           |
-+--------------+----------------+------------------------------------+-----------+
-| Jon Campbell | Lab 01L leader | Tue & Thu 9 - 10am, Old Chem 025   |           |
-+--------------+----------------+------------------------------------+-----------+
-| Ishrit Gupta | Lab 01L helper | Fri 1- 3pm, Old Chem 203B          |           |
-+--------------+----------------+------------------------------------+-----------+
-| Alan Wang    | Lab 02L helper | Mon & Wed 10 - 11am, Old Chem 203B |           |
-+--------------+----------------+------------------------------------+-----------+
++-------------+----------------+--------------------------+
+| **Name**    | **Role**       | **Office Hours**         |
++-------------+----------------+--------------------------+
+| Kat Husar   | Head TA\       |                          |
+|             | Lab 01L leader |                          |
++-------------+----------------+--------------------------+
+| Kelly Huang | Classroom TA   |                          |
++-------------+----------------+--------------------------+
+| Janice Kim  | Classroom TA   |                          |
++-------------+----------------+--------------------------+
+| Cathy Lee   | Lab 02L leader |                          |
++-------------+----------------+--------------------------+
+| Alan Wang   | Lab 01L helper |                          |
++-------------+----------------+--------------------------+
 
 # License
 
