--- a/support.qmd
+++ b/support.qmd
@@ -12,11 +12,11 @@ If you have a question during lecture or lab, feel free to ask it! There are lik
 
 The teaching team is here to help you be successful in the course. You are encouraged to attend office hours during the times posted on the home page to ask questions about the course content and assignments. A lot of questions are most effectively answered in-person, so office hours are a valuable resource. I encourage you to take advantage of them!
 
-Make a pledge to stop by office hours at least once during the first three weeks of class. If you truly have no questions to ask, just stop by and say hi and introduce yourself. You can find a list of everyone's office hours [here](overview.qmd).
+Make a pledge to stop by office hours at least once during the first three weeks of class. If you truly have no questions to ask, just stop by and say hi and introduce yourself. You can find a list of the teaching team's office hours [here](overview.qmd).
 
 ## Ed Discussion
 
-Outside of class and office hours, any general questions about course content or assignments should be posted on [Ed Discussion](https://edstem.org/us/courses/62513/discussion). There is a chance another student has already asked a similar question, so please check the other posts on Ed Discussion before adding a new question. If you know the answer to a question that is posted, I encourage you to respond!
+Outside of class and office hours, any general questions about course content or assignments should be posted on Ed Discussion. There is a chance another student has already asked a similar question, so please check the other posts on Ed Discussion before adding a new question. If you know the answer to a question that is posted, I encourage you to respond!
 
 ## Email
 
@@ -34,13 +34,13 @@ There are times may need help with the class that is beyond what can be provided
 
 -   **TimelyCare (formerly known as Blue Devils Care):** An online platform that is a convenient, confidential, and free way for Duke students to receive 24/7 mental health support through TalkNow and scheduled counseling. [bluedevilscare.duke.edu](https://bluedevilscare.duke.edu)
 
-## **Technology accommodations**
+## Technology accommodations
 
 Highly aided students who have limited access to computers may request loaner laptops through the [DukeLIFE Technology Assistance Program](https://dukelife.duke.edu/technology-assistance-program/). Please note that supplies are limited.
 
 Note that we will be using Duke's computational resources in this course. These resources are freely available to you. As long as your computer can connect to the internet and open a browser window, you can perform the necessary computing for this course. All software we use is open-source and/or freely available.
 
-## **Course materials costs**
+## Course materials costs
 
 There are no costs associated with this course. All readings will come from freely available, open resources (open-source textbooks, journal articles, etc.).
 
