--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -10,32 +10,32 @@ format:
 
 ### Class meetings
 
-|             |                         |                   |
-|-------------|-------------------------|-------------------|
-| **Lecture** | Tue & Thu 11:45am - 1pm | Old Chemistry 116 |
-| **Lab 01**  | Mon 11:45am - 1pm       | LSRC A247         |
-| **Lab 02**  | Mon 4:40 - 5:55pm       | Old Chemistry 101 |
++-------------------+---------------------------+------------------------+
+| **Lecture**       | Tue & Thu 10:05 - 11:20am | Old Chemistry 116      |
++-------------------+---------------------------+------------------------+
+| **Lab 01**        | Fri 8:30 - 9:45am         | Perkins Link #5        |
++-------------------+---------------------------+------------------------+
+| **Lab 02**        | Fri 10:05 - 11:20am       | Perkins Link #5        |
++-------------------+---------------------------+------------------------+
 
 ### Teaching team
 
-+---------------------+----------------+------------------------------------+
-| Name                | Role           | Office Hours                       |
-+=====================+================+====================================+
-| Prof. Maria Tackett | Instructor     | Mon 1:30 - 2:30pm, Old Chem 118B   |
-|                     |                |                                    |
-|                     |                | Thu 3 - 4pm, Old Chem 118B         |
-|                     |                |                                    |
-|                     |                | *or by appointment*                |
-+---------------------+----------------+------------------------------------+
-| Kat Husar           | Head TA\       | Tue 1:30 - 3:30pm, Old Chem 220    |
-|                     | Lab 02L leader |                                    |
-+---------------------+----------------+------------------------------------+
-| Jon Campbell        | Lab 01L leader | Tue & Thu 9 - 10am, Old Chem 025   |
-+---------------------+----------------+------------------------------------+
-| Ishrit Gupta        | Lab 01L helper | Fri 1- 3pm, Old Chem 203B          |
-+---------------------+----------------+------------------------------------+
-| Alan Wang           | Lab 02L helper | Mon & Wed 10 - 11am, Old Chem 203B |
-+---------------------+----------------+------------------------------------+
++---------------------+----------------+--------------------------------+
+| Name                | Role           | Office Hours                   |
++=====================+================+================================+
+| Prof. Maria Tackett | Instructor     | *or by appointment*            |
++---------------------+----------------+--------------------------------+
+| Kat Husar           | Head TA\       |                                |
+|                     | Lab 01L leader |                                |
++---------------------+----------------+--------------------------------+
+| Kelly Huang         | Classroom TA   |                                |
++---------------------+----------------+--------------------------------+
+| Janice Kim          | Classroom TA   |                                |
++---------------------+----------------+--------------------------------+
+| Cathy Lee           | Lab 02L leader |                                |
++---------------------+----------------+--------------------------------+
+| Alan Wang           | Lab 01 helper  |                                |
++---------------------+----------------+--------------------------------+
 
 ## Course description
 
@@ -60,7 +60,7 @@ By the end of the semester, you will be able to...
 
 ## Course materials
 
-While there is no official textbook for the course; readings will primarily be made available as they are assigned. We will use the statistical software R. Students will be able to access R through Docker containers provided by Duke Office of Information Technology. See the [computing page](computing-access.qmd) for more information.
+While there is no official textbook for the course; readings will be made available as they are assigned. We will use the statistical software R. Students will be able to access R through Docker containers provided by Duke Office of Information Technology. See the [computing page](computing-access.qmd) for more information.
 
 ## Course community
 
@@ -85,7 +85,7 @@ The [Student Disability Access Office (SDAO)](https://access.duke.edu/students) 
 
 ### Communication
 
-All lecture notes, assignment instructions, an up-to-date schedule, and other course materials may be found on the course website, [sta221-fa24.netlify.app](https://sta221-fa24.netlify.app).
+All lecture notes, assignment instructions, an up-to-date schedule, and other course materials may be found on the course website, [sta221-sp25.netlify.app](https://sta221-sp25.netlify.app).
 
 Links to Zoom meetings may be found in Canvas. Periodic announcements will be sent via email and will also be available through Ed Discussion and Canvas Announcements. Please check your email regularly to ensure you have the latest announcements for the course.
 
@@ -111,7 +111,7 @@ Your success on this course depends very much on you and the effort you put into
 
 -   If you have a question during lecture or lab, feel free to ask it! There are likely other students with the same question, so by asking you will create a learning opportunity for everyone.
 -   The teaching team is here to help you be successful in the course. You are encouraged to attend *office hours*[^1] to ask questions about the course content and assignments. Many questions are most effectively answered as you discuss them with others, so office hours are a valuable resource. You are encouraged to use them!
--   Outside of class and office hours, any general questions about course content or assignments should be posted on the class discussion forum [Ed Discussion](https://edstem.org/). There is a chance another student has already asked a similar question, so please check the other posts in Ed Discussion before adding a new question. If you know the answer to a question posted in the discussion forum, you are encouraged to respond!
+-   Outside of class and office hours, any general questions about course content or assignments should be posted on the class discussion forum Ed Discussion. There is a chance another student has already asked a similar question, so please check the other posts in Ed Discussion before adding a new question. If you know the answer to a question posted in the discussion forum, you are encouraged to respond!
 
 [^1]: Office hours are times the teaching team set aside each week to meet with students. [Click here](https://academicguides.duke.edu/reasons-to-attend-office-hours/) to learn more about how to effectively use office hours.
 
@@ -161,11 +161,11 @@ The purpose of the final project is to apply what you've learned to analyze an i
 
 #### Application exercises
 
-You will get the most out of the course if you actively participate in class and when working with your team. Parts of some lectures will be dedicated to working on Application Exercises (AEs). AEs are submitted by pushing your work to the relevant GitHub repo. AEs from Tuesday lectures should be submitted by Friday by 11:59p ET, and AEs from Thursday lectures are should be submitted by Sunday at 11:59p ET. Because AEs are intended for in-class activities, there are no extensions given on AEs.
+You will get the most out of the course if you actively participate in class and when working with your team. Parts of some lectures will be dedicated to working on Application Exercises (AEs). AEs are submitted by pushing your work to the relevant GitHub repo.
 
 AEs will be graded based on making a good-faith effort to attempt all questions covered in class. You are welcome to, but not required, to work on AEs beyond lecture.
 
-*Successful on-time effort on at least 80% of AEs will result in full credit for AEs in the final course grade.*
+*Successful effort on at least 80% of AEs will result in full credit for AEs in the final course grade.*
 
 #### Teamwork
 
@@ -179,11 +179,10 @@ The final course grade will be calculated as follows:
 
 | Category                       | Percentage |
 |--------------------------------|------------|
-| Homework                       | 25%        |
+| Homework                       | 30%        |
 | Final project                  | 15%        |
-| Labs                           | 15%        |
-| Exam 01                        | 20%        |
-| Exam 02                        | 20%        |
+| Labs                           | 10%        |
+| Exams (2 Midterms)             | 40%        |
 | Participation (AEs + Teamwork) | 5%         |
 
 </center>
@@ -263,7 +262,7 @@ The due dates for assignments are there to help you keep up with the course mate
 
 ### Waiver for extenuating circumstances
 
-If there are circumstances that prevent you from completing a lab or homework assignment by the stated due date, you may email me at maria.tackett\@duke.edu before the deadline to waive the late penalty. In your email, you only need to request the waiver; you do not need to provide explanation. *This waiver may only be used once in the semester, so only use it for a truly extenuating circumstance.*
+If there are circumstances that prevent you from completing a lab or homework assignment by the stated due date, you may email me at [maria.tackett\@duke.edu](maria.tackett@duke.edu) before the deadline to waive the late penalty. In your email, you only need to request the waiver; you do not need to provide explanation. *This waiver may only be used once in the semester, so only use it for a truly extenuating circumstance.*
 
 If there are circumstances that are having a longer-term impact on your academic performance, please let your academic dean know, as they can be a resource. Please let me know if you need help contacting your academic dean.
 
@@ -279,17 +278,11 @@ Every student is expected to attend and participate in lecture and labs. There m
 
 More details on Trinity attendance policies are available [here](https://trinity.duke.edu/undergraduate/academic-policies/class-attendance-and-missed-work).
 
-<!--# Attendance Policy Related to COVID Symptoms, Exposure, or Infection-->
-
-<!--Student health, safety, and well-being are the university's top priorities. To help ensure your well-being and the well-being of those around you, please do not come to class if you have tested positive for COVID-19 or have possible symptoms and have not yet been tested. If any of these situations apply to you, you must follow university guidance related to the ongoing COVID-19 pandemic and current health and safety protocols. If you are experiencing any COVID-19 symptoms, contact student health (dshcheckin@duke.edu, 919-681-9355). Learn more about current university policy related to COVID-19 at coronavirus.duke.edu.-->
-
-<!--To keep the university community as safe and healthy as possible, you will be expected to follow these guidelines. Please reach out to me and your academic dean as soon as possible if you need to quarantine or isolate so that we can discuss arrangements for your continued participation in class.-->
-
 ### Lecture recording request
 
 Lectures will be recorded on Panopto and will be made available to students with an excused absence upon request. Videos shared with such students will be available for a week after the lecture date. To request a particular lecture's video, please fill out the form at the link below. Please submit the form within 24 hours of missing lecture to ensure you have sufficient time to watch the recording. Please also make sure that any official documentation, such as STINFs, Dean's excuses, NOVAPs, and quarantine/removal from class notices from student health are also uploaded to the form.
 
-🔗 <https://forms.office.com/r/Y46k4dqRLY>
+🔗 <https://forms.office.com/r/rvsgNcumRy>
 
 About one week before each exam, the class recordings will be available to all students. These recordings will be available until the start of the exam.
 
@@ -315,14 +308,14 @@ There are times may need help with the class that is beyond what can be provided
 
 ## Important dates
 
--   **August 26**: Classes begin
--   **September 2**: Labor Day. No classes
--   **September 6**: Drop/Add ends
--   **October 14 - 15**: Fall Break. No classes
--   **November 8**: Last day to withdraw with "W"
+-   **January 8**: Classes begin
+-   **January 20**: Martin Luther King Jr. Day holiday.
+-   **January 22**: Drop/Add ends
+-   **March 10 - 14**: Spring break
+-   **March 26**: Last day to withdraw with "W"
 -   **November 27 - 29**: Thanksgiving recess
--   **December 6**: Classes end
--   **December 7 - 10**: Reading period
--   **December 11 - 16**: Final exam period
+-   **April 23**: Classes end
+-   **April 24 - 27**: Reading period
+-   **April 28 - May 3**: Final exam period
 
-[Click here](https://registrar.duke.edu/2024-2025-academic-calendar) for the full Duke academic calendar.
+[Click here](https://registrar.duke.edu/2024-2025-academic-calendar/#spring2025) for the full Duke academic calendar.
