--- a/syllabus.qmd
+++ b/syllabus.qmd
@@ -10,32 +10,34 @@ format:
 
 ### Class meetings
 
-+-------------------+---------------------------+------------------------+
-| **Lecture**       | Tue & Thu 10:05 - 11:20am | Old Chemistry 116      |
-+-------------------+---------------------------+------------------------+
-| **Lab 01**        | Fri 8:30 - 9:45am         | Perkins Link #5        |
-+-------------------+---------------------------+------------------------+
-| **Lab 02**        | Fri 10:05 - 11:20am       | Perkins Link #5        |
-+-------------------+---------------------------+------------------------+
++------------------+---------------------------+-----------------------+
+| **Lecture**      | Tue & Thu 10:05 - 11:20am | Old Chemistry 116     |
++------------------+---------------------------+-----------------------+
+| **Lab 01**       | Fri 8:30 - 9:45am         | Perkins Link #5       |
++------------------+---------------------------+-----------------------+
+| **Lab 02**       | Fri 10:05 - 11:20am       | Perkins Link #5       |
++------------------+---------------------------+-----------------------+
 
 ### Teaching team
 
-+---------------------+----------------+--------------------------------+
-| Name                | Role           | Office Hours                   |
-+=====================+================+================================+
-| Prof. Maria Tackett | Instructor     | *or by appointment*            |
-+---------------------+----------------+--------------------------------+
-| Kat Husar           | Head TA\       |                                |
-|                     | Lab 01L leader |                                |
-+---------------------+----------------+--------------------------------+
-| Kelly Huang         | Classroom TA   |                                |
-+---------------------+----------------+--------------------------------+
-| Janice Kim          | Classroom TA   |                                |
-+---------------------+----------------+--------------------------------+
-| Cathy Lee           | Lab 02L leader |                                |
-+---------------------+----------------+--------------------------------+
-| Alan Wang           | Lab 01 helper  |                                |
-+---------------------+----------------+--------------------------------+
++---------------------+----------------+-------------------------------------+
+| Name                | Role           | Office Hours                        |
++=====================+================+=====================================+
+| Prof. Maria Tackett | Instructor     | Wed 11am - 12pm, Old Chemistry 118B |
+|                     |                |                                     |
+|                     |                | *or by appointment*                 |
++---------------------+----------------+-------------------------------------+
+| Kat Husar           | Head TA\       |                                     |
+|                     | Lab 01L leader |                                     |
++---------------------+----------------+-------------------------------------+
+| Kelly Huang         | Classroom TA   |                                     |
++---------------------+----------------+-------------------------------------+
+| Janice Kim          | Classroom TA   |                                     |
++---------------------+----------------+-------------------------------------+
+| Cathy Lee           | Lab 02L leader |                                     |
++---------------------+----------------+-------------------------------------+
+| Alan Wang           | Lab 01 helper  |                                     |
++---------------------+----------------+-------------------------------------+
 
 ## Course description
 
