--- a/overview.qmd
+++ b/overview.qmd
@@ -1,6 +1,6 @@
 ---
 title: "STA 221 - Regression Analysis: Theory and Applications"
-subtitle: "Fall 2024 - Dr. Maria Tackett"
+subtitle: "Spring 2025 - Dr. Maria Tackett"
 navbar: false
 ---
 
@@ -16,13 +16,13 @@ Either any STA 100-level course or STA 230, 231, or 240L and MATH 216, 218, or 2
 
 # Class meetings
 
-+----------------------+---------------------------+--------------------+
-| **Lecture**          | Tue & Thu 10:05 - 11:20am | Old Chemistry 116  |
-+----------------------+---------------------------+--------------------+
-| **Lab 01**           | Fri 8:30 - 9:45am         | Perkins Link #5    |
-+----------------------+---------------------------+--------------------+
-| **Lab 02**           | Fri 10:05 - 11:20am       | Perkins Link #5    |
-+----------------------+---------------------------+--------------------+
++---------------------+---------------------------+-------------------+
+| **Lecture**         | Tue & Thu 10:05 - 11:20am | Old Chemistry 116 |
++---------------------+---------------------------+-------------------+
+| **Lab 01**          | Fri 8:30 - 9:45am         | Perkins Link #5   |
++---------------------+---------------------------+-------------------+
+| **Lab 02**          | Fri 10:05 - 11:20am       | Perkins Link #5   |
++---------------------+---------------------------+-------------------+
 
 # Teaching team
 
@@ -30,30 +30,26 @@ Either any STA 100-level course or STA 230, 231, or 240L and MATH 216, 218, or 2
 
 [Maria Tackett](https://www2.stat.duke.edu/~mt324) is an Assistant Professor of the Practice in the Department of Statistical Science at Duke University. Her work focuses on understanding how active learning strategies can be used to promote engagement and student motivation in undergraduate statistics courses. She also studies how classroom practices in introductory math and statistics courses impact students' sense of community, self-efficacy, and learning outcomes.
 
-+----------------------+--------------------+
-| Office hours         | Location           |
-+======================+====================+
-| Wed 11am - 12pm      | Old Chemistry 118B |
-+----------------------+--------------------+
-| *or by appointment.* |                    |
-+----------------------+--------------------+
+**Office hours time and location on Canvas.**
 
 ## Teaching assistants
 
-+---------------+----------------+------------------------+
-| **Name**      | **Role**       | **Office Hours**       |
-+---------------+----------------+------------------------+
-| Kat Husar     | Head TA\       |                        |
-|               | Lab 01L leader |                        |
-+---------------+----------------+------------------------+
-| Kelly Huang   | Classroom TA   |                        |
-+---------------+----------------+------------------------+
-| Janice Kim    | Classroom TA   |                        |
-+---------------+----------------+------------------------+
-| Cathy Lee     | Lab 02L leader |                        |
-+---------------+----------------+------------------------+
-| Alan Wang     | Lab 01L helper |                        |
-+---------------+----------------+------------------------+
++---------------+----------------+
+| **Name**      | **Role**       |
++---------------+----------------+
+| Kat Husar     | Head TA\       |
+|               | Lab 01L leader |
++---------------+----------------+
+| Kelly Huang   | Classroom TA   |
++---------------+----------------+
+| Janice Kim    | Classroom TA   |
++---------------+----------------+
+| Cathy Lee     | Lab 02L leader |
++---------------+----------------+
+| Alan Wang     | Lab 01L helper |
++---------------+----------------+
+
+**Office hours times and locations on Canvas.**
 
 # License
 
