--- a/index.qmd
+++ b/index.qmd
@@ -45,6 +45,13 @@ d |>
       )
     }
   ) |>
+    text_transform(cells_body(columns = c(notes)),
+    fn = function(x) {
+      ifelse(is.na(x), fontawesome::fa("file-pen", fill_opacity = 0.1),
+        glue::glue("<a href = {x}>{fontawesome::fa('file-pen')}</a><br>")
+      )
+    }
+  ) |>
   text_transform(cells_body(columns = c(ae)),
     fn = function(x) {
       ifelse(is.na(x), fontawesome::fa("users", fill_opacity = 0.1),
@@ -81,14 +88,14 @@ d |>
     }
   ) |>
   fmt_date(date, date_style = 30) |>
-  sub_missing(columns = c(date, topic, notes), missing_text = "") |>
+  sub_missing(columns = c(date, topic, due), missing_text = "") |>
   cols_align(
     align = "center", 
-    columns = c(week, dow, prepare, slides, ae, hw, lab,project)
+    columns = c(week, dow, prepare, slides,notes, ae, hw, lab,project)
     ) |>
   cols_align(
     align = "left", 
-    columns = c(date, topic, notes)
+    columns = c(date, topic, due)
     ) |>
   tab_style(
     style = cell_borders(
@@ -97,9 +104,13 @@ d |>
       style = "solid"
     ),
     locations = cells_body(
-      columns = c(date, topic, prepare,project)
+      columns = c(date, topic, prepare, ae, lab, project)
     )
-  )
+  ) |>
+  cols_width(
+    c(prepare, slides, notes, ae, hw, lab, project) ~ px(125)
+ )
+
 
 ```
 :::
